# bx

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  bx.mkf  makefile
.github/workflows/: main.yml
build-aux/: config.sub
include/bx/: allocator.h  allocator.inl  blockalloc.h  bounds.h  bx.h  cl.h  commandline.h  config.h  constants.h  countof.h  cpu.h  debug.h  (+57 more)
premake/: bx.lua  premake4.lua  toolchain.lua  uncrustify.cfg  unittest++.lua
scripts/: bin2c.lua  bx.lua  genie.lua  lemon.lua  toolchain.lua  unittest++.lua
src/: allocator.cpp  amalgamated.cpp  bounds.cpp  bx.cpp  bx_p.h  commandline.cpp  crt.cpp  crtimpl.cpp  crtnone.cpp  debug.cpp  dtoa.cpp  easing.cpp  file.cpp  filepath.cpp  fpumath.cpp  hash.cpp  math.cpp  mutex.cpp  os.cpp  process.cpp  sem.cpp  semaphore.cpp  settings.cpp  sort.cpp  string.cpp  thread.cpp  timer.cpp  url.cpp
test/: vector_complex.cpp  vector_nodefault.cpp  vector_primitive.cpp
tests/: allocator_test.cpp  atomic_test.cpp  bounds_test.cpp  bx_test.cpp  cast_test.cpp  crt_test.cpp  dbg.cpp  dbg.h  easing_test.cpp  filepath_test.cpp  float4_t.cpp  float4x4_test.cpp  fpumath.cpp  fpumath_test.cpp  handle.cpp  handle_bench.cpp  handle_test.cpp  hash_test.cpp  macros.cpp  macros_test.cpp  main.cpp  main_test.cpp  math_bench.cpp  math_test.cpp  misc_test.cpp  nlalloc_test.cpp  os_test.cpp  pixelformat_test.cpp  queue_test.cpp  readerwriter_test.cpp  ringbuffer_test.cpp  rng_test.cpp  run_test.cpp  settings_test.cpp  simd32_test.cpp  simd_bench.cpp  simd_t.cpp  simd_test.cpp  sort_test.cpp  string_test.cpp  (+21 more)
(+56 files in other folders)
